This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: refleak in initstdio
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: pitrou Nosy List: georg.brandl, nascheme, pitrou
Priority: normal Keywords:

Created on 2010-10-30 19:44 by nascheme, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
initstdio_refleak.txt nascheme, 2010-10-30 19:44
Messages (3)
msg120008 - (view) Author: Neil Schemenauer (nascheme) * (Python committer) Date: 2010-10-30 19:44
It looks to me like initstdio leaks a reference to "open".  AFAIK, PyObject_SetAttrString() does not steal a reference.
msg120009 - (view) Author: Georg Brandl (georg.brandl) * (Python committer) Date: 2010-10-30 19:47
LGTM.
msg121742 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-11-20 19:52
Fixed in r86607, thanks.
History
Date User Action Args
2022-04-11 14:57:08adminsetgithub: 54464
2010-11-20 19:52:15pitrousetstatus: open -> closed
versions: + Python 3.2
messages: + msg121742

resolution: fixed
stage: resolved
2010-10-30 19:47:10georg.brandlsetnosy: + georg.brandl
messages: + msg120009
2010-10-30 19:44:31naschemecreate