Issue #10255: Fix reference leak in Py_InitializeEx().  Patch by Neil Schemenauer.